update kandidat and suara
